--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/index-meta.png">
+  <meta property="og:image" content="assets/images/index-meta.png">
+  <meta name="twitter:title" content="Kopi Sean">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-121x174.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/128x184.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Kopi Sean</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -265,7 +269,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper align-center">
                     <div class="item-img mb-4">
-                        <img src="assets/images/-759x506.jpg" alt="" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="assets/images/118214484-875847283236232-1359090859281537552-n-759x641.jpg" alt="" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
                         
